--- a/style.css
+++ b/style.css
@@ -2,4 +2,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+body{
+  background-color: #F6F8F9;
+}
+header{
+  height: 70px;
+  padding-left: 2%;
+}
+
+.white{
+  background-color: white;
+}
+
+header > h1, img{
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 70px;
+}
+
+header > h1{
+  font-size: 40px;
+}
+  
