--- a/style.css
+++ b/style.css
@@ -17,13 +17,44 @@ header{
   background-color: white;
 }
 
-header > h1, img{
+#title > h1, img{
   display: inline-block;
   vertical-align: middle;
   line-height: 70px;
 }
 
-header > h1{
+#title > h1{
   font-size: 40px;
 }
   
+.main-page{
+width: 70%;
+margin: auto;
+}
+
+#commands{
+  margin-top: 50px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#commands > button{
+  font-size: 20px;
+  padding: 10px 15px;
+  border-radius: 7px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+#task{
+  background-color: #47ADF1;
+  border: 1px solid #47ADF1;
+  color: white;
+  margin-left: 30px;
+}
+
+#section{
+  border: 2px solid #CCD1D5;
+  color: grey;
+}
+
