--- a/style.css
+++ b/style.css
@@ -26,35 +26,107 @@ header{
 #title > h1{
   font-size: 40px;
 }
-  
+
+
 .main-page{
 width: 70%;
 margin: auto;
 }
 
 #commands{
+  display: block;
   margin-top: 50px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
 
 #commands > button{
-  font-size: 20px;
-  padding: 10px 15px;
+  font-size: 15px;
+  padding: 7px 12px;
   border-radius: 7px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
-#task{
+#add-task{
   background-color: #47ADF1;
   border: 1px solid #47ADF1;
   color: white;
   margin-left: 30px;
 }
 
-#section{
+#add-section{
   border: 2px solid #CCD1D5;
   color: grey;
 }
 
+main{
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.task{
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.list-item{
+  margin-top: 20px;
+}
+h2::before{
+  content: "\2BC6";
+}
+
+.list-item > span{
+  display: inline-block;
+}
+
+.readen{
+  font-size: 15px;
+  color: green;
+  border: 2px solid green;
+  border-radius: 50%;
+  padding: 1px 4px;
+}
+
+.unreaden{
+  font-size: 15px;
+  color: red;
+  border: 2px solid red;
+  border-radius: 50%;
+  padding: 1px 4px;
+}
+
+.list-name{
+  margin-left: 10px;
+}
+
+.notes{
+  padding: 7px 10px;
+  margin-left: 5px;
+  border-radius: 20px;
+  font-size: 12px;
+  color: white;
+}
+.editorial{
+  background-color: #45ABE9;
+}
+
+.Q1-Goals{
+  background-color: #9C72E4;
+}
+
+.Recruiting{
+  background-color: #64C0A9;
+}
+
+.Mobile{
+  background-color: #F29E3F;
+}
+
+.Website{
+  background-color: #D863A1;
+}
+
+.Sales{
+  background-color: #AFC93C;
+}
